OSCTR, Smart Start, and CCAN links

--- a/WebpageDevelopment/index.html
+++ b/WebpageDevelopment/index.html
@@ -594,7 +594,7 @@ Dr. Anderson's areas of expertise and interest include Bayesian classification o
                         </div>
                         <div class="col-md-8">
                             <h2>David M. Thompson, Ph.D.</h2><h4>Biostatistician</h4>
-                                                        <p><strong>David M. Thompson</strong> is an Associate Professor in the Department of Biostatistics and Epidemiology, University of Oklahoma Health Sciences Center.  He also serves as Associate Director of the department’s Research Design and Analysis Center (BSE RDAC) and director of the Training Unit within the Oklahoma Shared Clinical and Translational Resource (OSCTR).  He teaches courses in applied linear statistical models, nonparametric statistics, and longitudinal data analysis.  His research interests include longitudinal data analysis and approaches to hierarchical and correlated data. He is part of a team at the OUHSC that develops workshops in evidence-based health care.  He provides research design and statistical support to a variety of projects in public health and clinical medicine, many of which employ statistical models to evaluate associations between outcomes and a variety of fixed, random, and repeated effects.  </p><p>
+                                                        <p><strong>David M. Thompson</strong> is an Associate Professor in the Department of Biostatistics and Epidemiology, University of Oklahoma Health Sciences Center.  He also serves as Associate Director of the department’s Research Design and Analysis Center (BSE RDAC) and director of the Training Unit within the Oklahoma Shared Clinical and Translational Resource (<a href="http://osctr.ouhsc.edu/">OSCTR</a>).  He teaches courses in applied linear statistical models, nonparametric statistics, and longitudinal data analysis.  His research interests include longitudinal data analysis and approaches to hierarchical and correlated data. He is part of a team at the OUHSC that develops workshops in evidence-based health care.  He provides research design and statistical support to a variety of projects in public health and clinical medicine, many of which employ statistical models to evaluate associations between outcomes and a variety of fixed, random, and repeated effects.  </p><p>
 
 Examples of Dr. Thompson's collaborations at OUHSC include statistical methods for cluster-randomized trials (Thompson, Fernald, & Mold, 2012); cluster-adjusted measures of sensitivity and specificity in a patient questionnaire of medicine and supplement use (Hanigan, Dela Cruz et al. 2011);  generalized linear mixed models to analyze correlated ordinal ratings made by air quality inspectors (Johnson, Thompson, Clinkenbeard & Redus, 2008); GEE and mixed models to explore longitudinal outcomes in a surgical cohort  (Elkins, Thompson, Lane, Elkins & Payton 2008); and cluster-adjusted Bland-Altman techniques applied to correlated EEG measures in patients undergoing anesthesia (Ozcan, Thompson, Cure, Hine & Roberts, 2009).  </p>
 
@@ -617,7 +617,7 @@ Examples of Dr. Thompson's collaborations at OUHSC include statistical methods f
                         </div>
                         <div class="col-md-8">
                             <h2>Christopher Aston, Ph.D.</h2><h4>Biostatistician</h4>
-                                                        <p><strong>Christopher Aston </strong>is an Associate Research Professor of Pediatrics and Adjunct Associate Professor of Biostatistics and Epidemiology. He is also Director of the Biostatistics Core at Harold Hamm Diabetes Center and is a Faculty Biostatistician at OSCTR.
+                                                        <p><strong>Christopher Aston </strong>is an Associate Research Professor of Pediatrics and Adjunct Associate Professor of Biostatistics and Epidemiology. He is also Director of the Biostatistics Core at Harold Hamm Diabetes Center and is a Faculty Biostatistician at <a href="http://osctr.ouhsc.edu/">OSCTR</a>.
 </p><p>
 Dr. Aston's areas of expertise and interest include experimental design, data analysis, genetic epidemiology, and clinical trials.  </p>
                         </div>
@@ -770,7 +770,7 @@ Mr. Bohora was trained in biostatistics and epidemiology, and has research exper
 			<div class=container><div class="title-v1">
             <h2>BBMC Affiliates</h2>
                     <ul class=list-unstyled><li>Kathy Redmond | College of Medicine, Department of Pediatrics</li>
-					<li>Gene Hallford, Ph.D. | Assistant Professor, OSCTR Program Director</li>
+					<li>Gene Hallford, Ph.D. | Assistant Professor, <a href="http://osctr.ouhsc.edu/">OSCTR</a> Program Director</li>
 					<li>Michael Hunter, Ph.D. | College of Medicine, Department of Pediatrics</li></ul>
                 </div></div>
     </section><section id="research"><br><br><br><br>
@@ -840,7 +840,7 @@ are welcomed! If you would like to collaborate with us, please contact our <a hr
                     <img class="img-responsive" src="assets/img/portfolio/cdw.jpg" alt="" />
                     <div class="mask">
                         <h2>Clinical Data Warehouse</h2>
-                        <p>BBMC is partnering with OU College of Medicine, Oklahoma Shared Clinical and Translational Resources (OSTCR),
+                        <p>BBMC is partnering with OU College of Medicine, Oklahoma Shared Clinical and Translational Resources (<a href="http://osctr.ouhsc.edu/">OSCTR</a>),
 					OU Physicians, and the Health Care Authority/Meditech on the creation of a clinical data warehouse (CDW).
 					The development of CDW aims to connect electronic medical records (EMRs) to research and QI/QA communities. This
 					will improve OUHSC's ability to compete for grants and care for patients. It will also allow facilitation
@@ -855,7 +855,7 @@ are welcomed! If you would like to collaborate with us, please contact our <a hr
                     <img class="img-responsive" src="assets/img/portfolio/pencils.bmp" alt="" />
                     <div class="mask">
                         <h2>From Vulnerable to Resilient: Building Stronger Pathways to Early Childhood Success</h2>
-                        <p>OUHSC Department of Pediatrics and CCAN are partnering with Smart Start Oklahoma. This project is evaluating factors that may be affecting the enrollment of children in or at-risk of entering foster care into early education and child care services. This project has a multi-pronged approach using a quantitative survey with foster parents as participants, a document review/policy analysis, and qualitative interviews with parents, DHS caseworkers and administrators, early education and child care providers and administrators.</p>
+                        <p>OUHSC Department of Pediatrics and <a href="https://www.oumedicine.com/pediatrics/department-sections/developmental-behavioral-pediatrics/center-on-child-abuse-and-neglect">CCAN</a> are partnering with <a href="http://www.smartstartok.org/">Smart Start</a> Oklahoma. This project is evaluating factors that may be affecting the enrollment of children in or at-risk of entering foster care into early education and child care services. This project has a multi-pronged approach using a quantitative survey with foster parents as participants, a document review/policy analysis, and qualitative interviews with parents, DHS caseworkers and administrators, early education and child care providers and administrators.</p>
 
                     </div>
                 </div>
@@ -886,7 +886,7 @@ are welcomed! If you would like to collaborate with us, please contact our <a hr
                     <img class="img-responsive" src="assets/img/portfolio/pencils.bmp" alt="" />
                     <div class="mask">
                         <h3>From Vulnerable to Resilient: Building Stronger Pathways to Early Childhood Success</h3>
-                        <p>OUHSC Department of Pediatrics and CCAN are partnering with Smart Start Oklahoma. This project is evaluating factors that may be affecting the enrollment of children in or at-risk of entering foster care into early education and child care services. This project has a multi-pronged approach using a quantitative survey with foster parents as participants, a document review/policy analysis, and qualitative interviews with parents, DHS caseworkers and administrators, early education and child care providers and administrators.</p>
+                        <p>OUHSC Department of Pediatrics and <a href="https://www.oumedicine.com/pediatrics/department-sections/developmental-behavioral-pediatrics/center-on-child-abuse-and-neglect">CCAN</a> are partnering with <a href="http://www.smartstartok.org/">Smart Start</a> Oklahoma. This project is evaluating factors that may be affecting the enrollment of children in or at-risk of entering foster care into early education and child care services. This project has a multi-pronged approach using a quantitative survey with foster parents as participants, a document review/policy analysis, and qualitative interviews with parents, DHS caseworkers and administrators, early education and child care providers and administrators.</p>
 
                     </div>
                 </div>
@@ -933,9 +933,9 @@ are welcomed! If you would like to collaborate with us, please contact our <a hr
                                 </div>
                                 <div class="col-md-8">
                                     <h4>REDCap Overview</h4>
-                                    <p>The Research Electronic Data Capture (REDCap) system and REDCap Survey are powerful software programs created by Vanderbilt University and supported by the REDCap Consortium to facilitate Institutional Review Board (IRB)-approved clinical research and basic research. Data collected in the course of the research are managed by the program, and can be analyzed by commonly used statistical packages, including SAS, Stata, SPSS, and R.</p>
+                                    <p>The Research Electronic Data Capture (<a href="http://project-redcap.org/">REDCap</a>) system and REDCap Survey are powerful software programs created by Vanderbilt University and supported by the REDCap Consortium to facilitate Institutional Review Board (IRB)-approved clinical research and basic research. Data collected in the course of the research are managed by the program, and can be analyzed by commonly used statistical packages, including SAS, Stata, SPSS, and R.</p>
 							<p>The REDCap system provides functionality and features to enable researchers to rapidly develop databases and online surveys. These databases, data entry forms, and surveys are intuitive, easy to use tools for collecting data, including data validation.</p>
-							<p>The design, use, and maintenance of REDCap are managed by the Biomedical and Behavioral Methodology Core (BBMC). The BBMC supports and enhances study design, data capture, and analytics for Pediatrics research. .</p>
+							<p>The design, use, and maintenance of REDCap are managed by the Biomedical and Behavioral Methodology Core (<a href="http://ouhsc.edu/bbmc/">BBMC</a>). The BBMC supports and enhances study design, data capture, and analytics for Pediatrics research. .</p>
 							<p>REDCap has a flexible and fine-grained authorization matrix, allowing different members of the study team to have different levels of access (none, read-only or edit) to data entry forms, and access to database management and data export tools. There are provisions to restrict access to data export to allow export of de-identified data only. Advanced features of the system include branching logic for dynamic data entry form generation, file uploading, data importing, and embedded calculated database fields. </p>  <p>   	REDCap enforces authorization granted to each user by providing and/or enabling certain functions, tabs, links and buttons according to granted privileges.</p>
  <p>  REDCap includes a full audit trail, recording all operations on the data, including viewing and exporting. The audit log records operation, date and time, and the user performing the operation, permitting review of the audit trail as necessary.</p>	 <p>   REDCap enforces data integrity protection by design; all “databases” created by users are logical data sets on top of a relational database with built-in integrity protection controls. Additionally, REDCap can help to ensure data quality through use of Double Data Entry mode, forms and records locking and electronic signatures.</p>
                                 </div>
