--- a/WebpageDevelopment/index.html
+++ b/WebpageDevelopment/index.html
@@ -313,7 +313,7 @@
  <br>
  <p>The BBMC mission is to support and enhance study design, data capture, and analytics for Pediatrics research.</p><h3>Who We Are:</h3>
                     <p>BBMC is a  <strong>collaboration</strong> with College of Medicine - Department of Pediatrics, Department of Biostatistics and Epidemiology, and College of Public Health. Our team is comprised of <strong>biostatisticians</strong> and <strong>experienced researchers</strong>. The Core offers a variety of support services for projects at any stage of development.</p>
-					<br><p>  In addition to the consultation services our team provides, many members of the team continue to lead their own research studies within their own departments, including new method developments and applied research on Adverse Childhood Experiences (ACES). You can read about some of those studies <a href="#research">here.</a> BBMC also provides general and advanced research <strong>training opportunities </strong>for researchers at all levels of experience. For more information about these research programs, collaborative opportunities, or training, please contact our BBMC Director, <a href="mailto:david-bard@ouhsc.edu">David Bard, Ph.D.</a>  </p>
+					<br><p>  In addition to the consultation services our team provides, many members of the team continue to lead their own research studies within their own departments, including new method developments and applied research on Adverse Childhood Experiences (<a href="https://scholar.google.com/scholar?q=adverse+childhood+events">ACEs</a>). You can read about some of those studies <a href="#research">here</a>. BBMC also provides general and advanced research <strong>training opportunities </strong>for researchers at all levels of experience. For more information about these research programs, collaborative opportunities, or training, please contact our BBMC Director, <a href="mailto:david-bard@ouhsc.edu">David Bard, Ph.D.</a>  </p>
                 </div></div>
 
 
@@ -778,7 +778,7 @@ Mr. Bohora was trained in biostatistics and epidemiology, and has research exper
         <div class="text-center margin-bottom-50">
             <h2 class="title-v2 title-center">BBMC Portfolio</h2>
             <p class="space-lg-hor"><p>Read about some of the initiatives and projects BBMC members are working on. In addition to BBMC duties, BBMC investigators engage in parallel pursuit of their own programs of research. Much of our research
-focuses on Adverse Childhood Experiences (ACEs) and possible mental and physical health sequelae. New collaborators
+focuses on Adverse Childhood Experiences (<a href="https://scholar.google.com/scholar?q=adverse+childhood+events">ACEs</a>) and possible mental and physical health sequelae. New collaborators
 are welcomed! If you would like to collaborate with us, please contact our <a href="mailto:david-bard@ouhsc.edu">BBMC Director David Bard, Ph.D.</a></p>
         </div><p><a href="http://reproducibleresearch.net/">Reproducible research</a> is a mentality and technique that makes an investigation transparent for outsiders to inspect and potentially conduct on their own.  Here are some code &amp; report repositories of studies conducted by BBMC members.  Many more are in the pipeline, to be released in 2015 &amp; 2016.</p>
 		<table>
