removing degree periods
It was making some formatting look funny.

--- a/WebpageDevelopment/index.html
+++ b/WebpageDevelopment/index.html
@@ -312,8 +312,8 @@
                 </div><h1>Biomedical and Behavioral Methodology Core</h1>
  <br>
  <p>The BBMC mission is to support and enhance study design, data capture, and analytics for Pediatrics research.</p><h3>Who We Are:</h3>
-                    <p>BBMC is a  <strong>collaboration</strong> with College of Medicine - Department of Pediatrics, Department of Biostatistics and Epidemiology, and College of Public Health. Our team is comprised of <strong>biostatisticians</strong> and <strong>experienced researchers</strong>. The Core offers a variety of support services for projects at any stage of development.</p>
-					<br><p>  In addition to the consultation services our team provides, many members of the team continue to lead their own research studies within their own departments, including new method developments and applied research on Adverse Childhood Experiences (<a href="https://scholar.google.com/scholar?q=adverse+childhood+events">ACEs</a>). You can read about some of those studies <a href="#research">here</a>. BBMC also provides general and advanced research <strong>training opportunities </strong>for researchers at all levels of experience. For more information about these research programs, collaborative opportunities, or training, please contact our BBMC Director, <a href="mailto:david-bard@ouhsc.edu">David Bard, Ph.D.</a>  </p>
+                    <p>BBMC is a  <strong>collaboration</strong> with <a href="http://www.oumedicine.com/collegeofmedicine">College of Medicine</a> - <a href="http://www.oumedicine.com/pediatrics">Department of Pediatrics</a>, <a href="http://coph.ouhsc.edu/departments/bse/">Department of Biostatistics and Epidemiology</a>, and <a href="http://coph.ouhsc.edu/">College of Public Health</a>. Our team is comprised of <strong>biostatisticians</strong> and <strong>experienced researchers</strong>. The Core offers a variety of support services for projects at any stage of development.</p>
+					<br><p>  In addition to the consultation services our team provides, many members of the team continue to lead their own research studies within their own departments, including new method developments and applied research on Adverse Childhood Experiences (<a href="https://scholar.google.com/scholar?q=adverse+childhood+events">ACEs</a>). You can read about some of those studies <a href="#research">here</a>. BBMC also provides general and advanced research <strong>training opportunities </strong>for researchers at all levels of experience. For more information about these research programs, collaborative opportunities, or training, please contact our BBMC Director, <a href="mailto:david-bard@ouhsc.edu">David Bard, PhD</a>.  </p>
                 </div></div>
 
 
@@ -522,8 +522,8 @@
 
                         </div>
                         <div class="col-md-8">
-                            <h2>David Bard, Ph.D.</h2><h4>BBMC Director</h4>
-                                                        <p><strong>David Bard</strong>, Associate Professor of Pediatrics and is the BBMC Director. He received his B.A. from Bethany College in Lindsborg, KS and his M.S. and Ph.D. in psychology from University of Oklahoma. In addition to his BBMC directorship, he also is principal investigator for a number of pediatric research studies.</p>
+                            <h2>David Bard, PhD</h2><h4>BBMC Director</h4>
+                                                        <p><strong>David Bard</strong>, Associate Professor of Pediatrics and is the BBMC Director. He received his BA from Bethany College in Lindsborg, KS and his MS and PhD in psychology from University of Oklahoma. In addition to his BBMC directorship, he also is principal investigator for a number of pediatric research studies.</p>
 														<p>
 
 Dr. Bard's areas of expertise include quantitative statistical analysis and methodology, pediatric epidemiology, child maltreatment prevention, judgment and decision making, and programs evaluation. He is a founder of the REDCap Governance Body, and his team has contributed to the development of <a href="https://github.com/OuhscBbmc/REDCapR">REDCapR</a>, a package of utilities integrating REDCap with R statistical computing software. </p>
@@ -547,8 +547,8 @@ Dr. Bard's areas of expertise include quantitative statistical analysis and meth
 
                         </div>
                         <div class="col-md-8">
-                            <h2>William Beasley, Ph.D.</h2><h4>Biostatistician</h4>
-                                                        <p><strong>William Beasley </strong>is an Assistant Professor at OU Pediatrics. He received his M.A. in psychology from Davidson College and his Ph.D. in quantitative psychology from University of Oklahoma. In addition to his role at BBMC, he provides statistical analysis and software development to research studies at OUHSC.
+                            <h2>William Beasley, PhD</h2><h4>Biostatistician</h4>
+                                                        <p><strong>William Beasley </strong>is an Assistant Professor at OU Pediatrics. He received his MA in psychology from Davidson College and his PhD in quantitative psychology from University of Oklahoma. In addition to his role at BBMC, he provides statistical analysis and software development to research studies at OUHSC.
 <p>
 Dr. Beasley's areas of expertise and interest include Bayesian and Frequentist statistics, bioinformatics, simulation methods, and exploratory and graphical analysis, and reproducible research. He also has a wealth of software programming experience including SQL Server, C#, and R. </p>
 
@@ -571,8 +571,8 @@ Dr. Beasley's areas of expertise and interest include Bayesian and Frequentist s
 
                         </div>
                         <div class="col-md-8">
-                            <h2>Michael Anderson, Ph.D.</h2><h4>Biostatistician</h4>
-                                                        <p><strong>Michael Anderson</strong>is an Assistant Professor at OU College of Public Health Department of Biostatistics and Epidemiology. He received his B.A. in statistics from Utah State University and his M.S. and Ph.D. in statistics from Kansas State University and became a member of OUHSC faculty in 2009. </p><p>
+                            <h2>Michael Anderson, PhD</h2><h4>Biostatistician</h4>
+                                                        <p><strong>Michael Anderson</strong>is an Assistant Professor at OU College of Public Health Department of Biostatistics and Epidemiology. He received his BA in statistics from Utah State University and his MS and PhD in statistics from Kansas State University and became a member of OUHSC faculty in 2009. </p><p>
 Dr. Anderson's areas of expertise and interest include Bayesian classification of high dimensional data, statistical genomics, Bayesian statistical analysis, bioinformatics, statistical computing, non-parametric, mixed models, and statistical education. He currently teaches several courses in the Department of Biostatistics and Epidemiology and works on statistical analysis for research for a number of research studies.
  </p>
                         </div>
@@ -593,7 +593,7 @@ Dr. Anderson's areas of expertise and interest include Bayesian classification o
 
                         </div>
                         <div class="col-md-8">
-                            <h2>David M. Thompson, Ph.D.</h2><h4>Biostatistician</h4>
+                            <h2>David M. Thompson, PhD</h2><h4>Biostatistician</h4>
                                                         <p><strong>David M. Thompson</strong> is an Associate Professor in the Department of Biostatistics and Epidemiology, University of Oklahoma Health Sciences Center.  He also serves as Associate Director of the department’s Research Design and Analysis Center (BSE RDAC) and director of the Training Unit within the Oklahoma Shared Clinical and Translational Resource (<a href="http://osctr.ouhsc.edu/">OSCTR</a>).  He teaches courses in applied linear statistical models, nonparametric statistics, and longitudinal data analysis.  His research interests include longitudinal data analysis and approaches to hierarchical and correlated data. He is part of a team at the OUHSC that develops workshops in evidence-based health care.  He provides research design and statistical support to a variety of projects in public health and clinical medicine, many of which employ statistical models to evaluate associations between outcomes and a variety of fixed, random, and repeated effects.  </p><p>
 
 Examples of Dr. Thompson's collaborations at OUHSC include statistical methods for cluster-randomized trials (Thompson, Fernald, & Mold, 2012); cluster-adjusted measures of sensitivity and specificity in a patient questionnaire of medicine and supplement use (Hanigan, Dela Cruz et al. 2011);  generalized linear mixed models to analyze correlated ordinal ratings made by air quality inspectors (Johnson, Thompson, Clinkenbeard & Redus, 2008); GEE and mixed models to explore longitudinal outcomes in a surgical cohort  (Elkins, Thompson, Lane, Elkins & Payton 2008); and cluster-adjusted Bland-Altman techniques applied to correlated EEG measures in patients undergoing anesthesia (Ozcan, Thompson, Cure, Hine & Roberts, 2009).  </p>
@@ -616,7 +616,7 @@ Examples of Dr. Thompson's collaborations at OUHSC include statistical methods f
 
                         </div>
                         <div class="col-md-8">
-                            <h2>Christopher Aston, Ph.D.</h2><h4>Biostatistician</h4>
+                            <h2>Christopher Aston, PhD</h2><h4>Biostatistician</h4>
                                                         <p><strong>Christopher Aston </strong>is an Associate Research Professor of Pediatrics and Adjunct Associate Professor of Biostatistics and Epidemiology. He is also Director of the Biostatistics Core at Harold Hamm Diabetes Center and is a Faculty Biostatistician at <a href="http://osctr.ouhsc.edu/">OSCTR</a>.
 </p><p>
 Dr. Aston's areas of expertise and interest include experimental design, data analysis, genetic epidemiology, and clinical trials.  </p>
@@ -717,8 +717,8 @@ Dr. Aston's areas of expertise and interest include experimental design, data an
 
                         </div>
                         <div class="col-md-8">
-                            <h2>Maleeha Shahid, M.B.,B.S., M.P.H. </h2><h4>Affiliate Research Biostatistician</h4>
-                                                        <p><strong>Maleeha Shahid</strong> is a Research Biostatistician at OUHSC. She received her M.P.H. from OUHSC College of Public Health and her M.B.,B.S. (Bachelor of Medicine and Bachelor of Surgery) from  Sindh Medical College – University of Karachi in Karachi, Pakistan. Ms. Shahid is currently working on her M.S. in Human Resources. She has taken her United States Medical Licensing Exams and is ECFMG Certified. She is also a <a href="http://www.oumedicine.com/pediatrics/department-sections/developmental-behavioral-pediatrics/child-study-center/programs-and-clinical-services/lend">LEND</a> fellow.  </p><p>She works on multiple research studies for OUHSC’s Sooner SUCCESS and Section of Developmental and Behavioral Pediatrics.  She is experienced in study design, development of research instruments, collection, management and analysis of data, interpretation of results, and preparation of reports. She is also gaining familiarity with qualitative methodology and network analysis.
+                            <h2>Maleeha Shahid, MB, BS, MPH </h2><h4>Affiliate Research Biostatistician</h4>
+                                                        <p><strong>Maleeha Shahid</strong> is a Research Biostatistician at OUHSC. She received her MPH from OUHSC College of Public Health and her MB, BS (Bachelor of Medicine and Bachelor of Surgery) from Sindh Medical College – University of Karachi in Karachi, Pakistan. Ms. Shahid is currently working on her MS in Human Resources. She has taken her United States Medical Licensing Exams and is ECFMG Certified. She is also a <a href="http://www.oumedicine.com/pediatrics/department-sections/developmental-behavioral-pediatrics/child-study-center/programs-and-clinical-services/lend">LEND</a> fellow.</p><p>She works on multiple research studies for OUHSC’s Sooner SUCCESS and Section of Developmental and Behavioral Pediatrics.  She is experienced in study design, development of research instruments, collection, management and analysis of data, interpretation of results, and preparation of reports. She is also gaining familiarity with qualitative methodology and network analysis.
 
  </p>
                         </div>
@@ -738,8 +738,8 @@ Dr. Aston's areas of expertise and interest include experimental design, data an
 
                         </div>
                         <div class="col-md-8">
-                            <h2>Michael Hunter, Ph.D.</h2><h4>Affiliate Biostatistician</h4>
-                                                        <p><strong>Michael Hunter</strong> received his Ph.D. in Quantitative Psychology from University of Oklahoma. He currently is working on multiple research studies at University of Oklahoma Health Sciences Center, including a large-scale simulation study aimed at analyzing the ability of randomized block designs to detect effects when present. He ...
+                            <h2>Michael Hunter, PhD</h2><h4>Affiliate Biostatistician</h4>
+                                                        <p><strong>Michael Hunter</strong> received his PhD in Quantitative Psychology from University of Oklahoma. He currently is working on multiple research studies at University of Oklahoma Health Sciences Center, including a large-scale simulation study aimed at analyzing the ability of randomized block designs to detect effects when present. He ...
  </p>
                         </div>
                     </div>
@@ -759,7 +759,7 @@ Dr. Aston's areas of expertise and interest include experimental design, data an
 
                         </div>
                         <div class="col-md-8">
-                            <h2>Som B. Bohora, M.S. </h2><h4>Affiliate Biostatistician</h4>
+                            <h2>Som B. Bohora, MS </h2><h4>Affiliate Biostatistician</h4>
                                                         <p><strong>Som Bohora</strong> is a Research Biostatistician at the Behavioral and Developmental Pediatrics section at OUHSC. He received his MApStat and MS in Biostatistics from LSU and OUHSC, respectively. In addition to BBMC, he works as a statistician and data programmer in a number of pediatric research projects.
 Mr. Bohora was trained in biostatistics and epidemiology, and has research experience in Fetal Alcohol Spectrum Disorders (FASD), HIV/AIDS clinical trials and child maltreatment prevention. He is interested in the applications of statistical computing and simulation, data analytics, and dynamic reporting. He uses mainly R and SAS software.
   </p>
@@ -770,8 +770,8 @@ Mr. Bohora was trained in biostatistics and epidemiology, and has research exper
 			<div class=container><div class="title-v1">
             <h2>BBMC Affiliates</h2>
                     <ul class=list-unstyled><li>Kathy Redmond | College of Medicine, Department of Pediatrics</li>
-					<li>Gene Hallford, Ph.D. | Assistant Professor, <a href="http://osctr.ouhsc.edu/">OSCTR</a> Program Director</li>
-					<li>Michael Hunter, Ph.D. | College of Medicine, Department of Pediatrics</li></ul>
+					<li>Gene Hallford, PhD | Assistant Professor, <a href="http://osctr.ouhsc.edu/">OSCTR</a> Program Director</li>
+					<li>Michael Hunter, PhD | College of Medicine, Department of Pediatrics</li></ul>
                 </div></div>
     </section><section id="research"><br><br><br><br>
 	<div class="container content-sm">
@@ -779,7 +779,7 @@ Mr. Bohora was trained in biostatistics and epidemiology, and has research exper
             <h2 class="title-v2 title-center">BBMC Portfolio</h2>
             <p class="space-lg-hor"><p>Read about some of the initiatives and projects BBMC members are working on. In addition to BBMC duties, BBMC investigators engage in parallel pursuit of their own programs of research. Much of our research
 focuses on Adverse Childhood Experiences (<a href="https://scholar.google.com/scholar?q=adverse+childhood+events">ACEs</a>) and possible mental and physical health sequelae. New collaborators
-are welcomed! If you would like to collaborate with us, please contact our <a href="mailto:david-bard@ouhsc.edu">BBMC Director David Bard, Ph.D.</a></p>
+are welcomed! If you would like to collaborate with us, please contact our <a href="mailto:david-bard@ouhsc.edu">BBMC Director David Bard, PhD</a></p>
         </div><p><a href="http://reproducibleresearch.net/">Reproducible research</a> is a mentality and technique that makes an investigation transparent for outsiders to inspect and potentially conduct on their own.  Here are some code &amp; report repositories of studies conducted by BBMC members.  Many more are in the pipeline, to be released in 2015 &amp; 2016.</p>
 		<table>
 <thead>
