psych & quant links

--- a/WebpageDevelopment/index.html
+++ b/WebpageDevelopment/index.html
@@ -523,7 +523,7 @@
                         </div>
                         <div class="col-md-8">
                             <h2>David Bard, PhD</h2><h4>BBMC Director</h4>
-                                                        <p><strong>David Bard</strong>, Associate Professor of Pediatrics and is the BBMC Director. He received his BA from Bethany College in Lindsborg, KS and his MS and PhD in psychology from University of Oklahoma. In addition to his BBMC directorship, he also is principal investigator for a number of pediatric research studies.</p>
+                                                        <p><strong>David Bard</strong>, Associate Professor of Pediatrics and is the BBMC Director. He received his BA from Bethany College in Lindsborg, KS and his MS and PhD in <a href="http://www.ou.edu/cas/psychology/index.html">psychology</a> from University of Oklahoma. In addition to his BBMC directorship, he also is principal investigator for a number of pediatric research studies.</p>
 														<p>
 
 Dr. Bard's areas of expertise include quantitative statistical analysis and methodology, pediatric epidemiology, child maltreatment prevention, judgment and decision making, and programs evaluation. He is a founder of the REDCap Governance Body, and his team has contributed to the development of <a href="https://github.com/OuhscBbmc/REDCapR">REDCapR</a>, a package of utilities integrating REDCap with R statistical computing software. </p>
@@ -548,7 +548,7 @@ Dr. Bard's areas of expertise include quantitative statistical analysis and meth
                         </div>
                         <div class="col-md-8">
                             <h2>William Beasley, PhD</h2><h4>Biostatistician</h4>
-                                                        <p><strong>William Beasley </strong>is an Assistant Professor at OU Pediatrics. He received his MA in psychology from Davidson College and his PhD in quantitative psychology from University of Oklahoma. In addition to his role at BBMC, he provides statistical analysis and software development to research studies at OUHSC.
+                                                        <p><strong>William Beasley </strong>is an Assistant Professor at OU Pediatrics. He received his MA in psychology from Davidson College and his PhD in <a href="http://www.ou.edu/cas/psychology/Research/Quantitative.html">quantitative psychology</a> from University of Oklahoma. In addition to his role at BBMC, he provides statistical analysis and software development to research studies at OUHSC.
 <p>
 Dr. Beasley's areas of expertise and interest include Bayesian and Frequentist statistics, bioinformatics, simulation methods, and exploratory and graphical analysis, and reproducible research. He also has a wealth of software programming experience including SQL Server, C#, and R. </p>
 
@@ -739,7 +739,7 @@ Dr. Aston's areas of expertise and interest include experimental design, data an
                         </div>
                         <div class="col-md-8">
                             <h2>Michael Hunter, PhD</h2><h4>Affiliate Biostatistician</h4>
-                                                        <p><strong>Michael Hunter</strong> received his PhD in Quantitative Psychology from University of Oklahoma. He currently is working on multiple research studies at University of Oklahoma Health Sciences Center, including a large-scale simulation study aimed at analyzing the ability of randomized block designs to detect effects when present. He ...
+                                                        <p><strong>Michael Hunter</strong> received his PhD in <a href="http://www.ou.edu/cas/psychology/Research/Quantitative.html">Quantitative Psychology</a> from University of Oklahoma. He currently is working on multiple research studies at University of Oklahoma Health Sciences Center, including a large-scale simulation study aimed at analyzing the ability of randomized block designs to detect effects when present. He ...
  </p>
                         </div>
                     </div>
