removing Mike Hunter from affiliates
since he's already above

--- a/WebpageDevelopment/index.html
+++ b/WebpageDevelopment/index.html
@@ -769,9 +769,10 @@ Mr. Bohora was trained in biostatistics and epidemiology, and has research exper
             </div> </div>
 			<div class=container><div class="title-v1">
             <h2>BBMC Affiliates</h2>
-                    <ul class=list-unstyled><li>Kathy Redmond | College of Medicine, Department of Pediatrics</li>
-					<li>Gene Hallford, PhD | Assistant Professor, <a href="http://osctr.ouhsc.edu/">OSCTR</a> Program Director</li>
-					<li>Michael Hunter, PhD | College of Medicine, Department of Pediatrics</li></ul>
+                    <ul class=list-unstyled>
+                      <li>Kathy Redmond | College of Medicine, Department of Pediatrics</li>
+                      <li>Gene Hallford, PhD | Assistant Professor, <a href="http://osctr.ouhsc.edu/">OSCTR</a> Program Director</li>
+                    </ul>
                 </div></div>
     </section><section id="research"><br><br><br><br>
 	<div class="container content-sm">
